--- a/package.json
+++ b/package.json
@@ -8,8 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
+    "autoprefixer": "^10.1.0",
+    "axios": "^0.21.1",
+    "dayjs": "^1.9.7",
+    "draft-js": "^0.11.7",
+    "lodash": "^4.17.20",
     "next": "10.0.3",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-hook-form": "^6.13.1",
+    "react-modal": "^3.12.1",
+    "sass": "^1.30.0",
+    "swr": "^0.3.11",
+    "tailwindcss": "^2.0.2",
+    "validator": "^13.5.2"
+  },
+  "devDependencies": {}
 }
