--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
+    "react-alert": "^7.0.2",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.1",
