--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-hook-form": "^6.13.1",
     "react-modal": "^3.12.1",
+    "react-tiny-popover": "^6.0.4",
     "sass": "^1.30.0",
     "swr": "^0.3.11",
     "tailwindcss": "^2.0.2",
